Continued work on PHP, need to update MySQL connection logic for prepared statements.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -13,9 +13,9 @@
 	<!-- Sign In prompt -->
 	<div id="loginPrompt">
 		Username:
-		<input type='text' name='username'><br>
+		<input id="loginUsername" type='text' name='username'><br>
 		Password:
-		<input type='password' name='password'><br>
+		<input id="loginPassword" type='password' name='password'><br>
 		<div onclick="attemptLogIn();"><p>Log In</p></div><br>
 		<p id="logInError"></p>
 	</div>
