--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -4,8 +4,9 @@
 <meta charset="utf-8">
 <title>Multisweeper</title>
 <link rel="stylesheet" type="text/css" href="style/multisweeper.css" />
-<script src="scripts/minefield.js"></script>
 <script src="scripts/dataController.js"></script>
+<script src="scripts/minefield.js"></script>
+<script src="scripts/playerController.js"></script>
 </head>
 
 <body onLoad="debug();">
@@ -20,9 +21,17 @@
 		<p id="logInError"></p>
 	</div>
 
+	<!-- User Information -->
+	<div id="userInfo">
+		Please sign in using the log-in prompt.
+	</div>
+
     <!-- Sign Up for next game prompt -->
     <!-- Canvas for game -->
     <canvas id="gameArea" height="720" width="1200">Your browser does not support the canvas element. Please use a HTML5 compatible browser.</canvas>
+
+    <!-- Submit button -->
+    <div onclick="submitAction();"><p>Submit Move</p></div>
     
    	<!-- Current Players -->
     <!-- Chat area -->
@@ -31,7 +40,7 @@
 		function debug() {		
 			setTimeout( function(){
 				getMinefieldData();
-			}, 8000);	
+			}, 3000);	
 		}
 	</script>
 </body>
