Finished all gameplay functionality, working on registering players next.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -19,6 +19,7 @@
 		Password:
 		<input id="loginPassword" type='password' name='password'><br>
 		<div onclick="attemptLogIn();"><p>Log In</p></div><br>
+		<div onclick="attemptRegister();"><p>Register</p></div><br>
 		<p id="logInError"></p>
 	</div>
 
