Added signing up for the next game ala signUpForNextGame.php

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -31,8 +31,8 @@
     <!-- Sign Up for next game prompt -->
 
     <div id="nextGamePrompt">
-    	<p id="nextGameText">You are currently not signed up for the next game.</p>
-    	<div onclick="attemptNextGame();"><p>Sign Up For The Next Game</p></div>
+    	<p id="nextGameText">You need to be logged in in order to sign up for the next game.</p>
+    	<div id="nextGameButton" onclick="attemptNextGameSignUp();"><p>Sign Up For The Next Game</p></div>
     </div>
     <!-- Canvas for game -->
     <canvas id="gameArea" height="720" width="1200">Your browser does not support the canvas element. Please use a HTML5 compatible browser.</canvas>
