--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -56,6 +56,7 @@
    		<table id="playerListTable">
    			<tr>
    				<td>Player Name</td>
+          <td>Status</td>
    			</tr>
    		</table>
    	</div>
