Added ability for game to 'time out' players if they do not take an action within 4 hours of the last action sent.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -65,7 +65,8 @@
     
     <script type="text/javascript">
 		function debug() {		
-			checkCookie();	
+			checkCookie();
+      getMinefieldData();	
 		}
 	</script>
 </body>
