--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -66,6 +66,11 @@
   </div>
 
   <!-- Chat area -->
+  <div id="chatArea">
+    <input id="chatEntry" type="text">
+    <div id="chatLog">
+    </div>
+  </div>
     
   <script type="text/javascript">
 		function debug() {	
