--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -76,6 +76,7 @@
     
   <script type="text/javascript">
 		function debug() {
+      initInteractions();
 			checkCookie();
       getMinefieldData();
 		}
