Minefield is now expandable. Actual code to expand coming soon.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -47,17 +47,19 @@
   </div>
 
 	<div id="mainArea">
-    <!-- Canvas for game -->
-    <canvas id="gameArea" height="900" width="1500">Your browser does not support the canvas element. Please use a HTML5 compatible browser.</canvas>
+    <div>
+      <!-- Canvas for game -->
+      <canvas id="gameArea" height="900" width="1500">Your browser does not support the canvas element. Please use a HTML5 compatible browser.</canvas>
 
-    <!-- Current Players -->
-    <div id="playerList">
-      <table id="playerListTable">
-        <tr>
-          <td>Player Name</td>
-          <td>Status</td>
-        </tr>
-      </table>
+      <!-- Current Players -->
+      <div id="playerList">
+        <table id="playerListTable">
+          <tr>
+            <td>Player Name</td>
+            <td>Status</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </div>
 
