Traps ahoy! Fixed various other bugs.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -57,6 +57,7 @@
           <tr>
             <td>Player Name</td>
             <td>Status</td>
+            <td>Trap</td>
           </tr>
         </table>
       </div>
