Added ballista and fixed timer issues.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Timer update -->
-    <div class="topBarBox">
+    <div id="timerBox" class="topBarBox">
       <p id="timerText"></p>
     </div>
   </div>
