Added a loading screen to the start of the game.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -5,6 +5,7 @@
 <title>Multisweeper</title>
 <link rel="stylesheet" type="text/css" href="style/multisweeper.css" />
 <script src="scripts/actionController.js"></script>
+<script src="scripts/graphicsController.js"></script>
 <script src="scripts/interactionController.js"></script>
 <script src="scripts/minefield/minefieldController.js"></script>
 <script src="scripts/minefield/minefieldGraphics.js"></script>
@@ -64,6 +65,11 @@
     <input id="chatEntry" type="text">
     <div id="chatLog">
     </div>
+  </div>
+
+  <!-- Loading screen -->
+  <div id="loadingScreen">
+    <img src="images/loading.png">
   </div>
     
   <script type="text/javascript">
