--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -17,7 +17,7 @@
   <script src="scripts/socketController.js"></script>
 </head>
 
-<body onLoad="onFinishedLoading();">
+<body onLoad="onFinishedLoading();" onResize="drawMinefield();">
 
   <!-- The main screen area -->
   <div id="mainArea">
