Better styled the unit tab.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -49,6 +49,7 @@
         <div id="playerList">
           <table id="playerListTable">
             <tr>
+              <td><img src="images/blank_icon.png"</td>
               <td>Player Name</td>
               <td>Status</td>
               <td>Trap</td>
