Added new loading image, but the quality needs to be improved significantly.

--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -73,7 +73,7 @@
 
   <!-- Loading screen -->
   <div id="loadingScreen">
-    <img src="images/loading.png">
+    <img src="images/ui/loading.gif">
   </div>
    
   <!--Automatic scripts -->
