--- a/play_multisweeper.html
+++ b/play_multisweeper.html
@@ -75,6 +75,8 @@
   <div id="loadingScreen">
     <img src="images/ui/loading.gif">
   </div>
+
+  <img id="loadingIcon" src="images/ui/loading.gif">
    
   <!--Automatic scripts -->
   <script type="text/javascript">
