Changed name from Multisweeper to Sweep Elite.

--- a/play.html
+++ b/play.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Multisweeper</title>
-  <link rel="stylesheet" type="text/css" href="style/multisweeper.css" />
+  <title>Sweep Elite</title>
+  <link rel="stylesheet" type="text/css" href="style/sweepelite.css" />
   <script src="scripts/actionController.js"></script>
   <script src="scripts/barController.js"></script>
   <script src="scripts/graphicsController.js"></script>
