--- a/play.html
+++ b/play.html
@@ -1,3 +1,19 @@
+<!-- Sweep Elite
+
+☐☐☐☐☐☐
+☐2☐☐P☐
+☐☐☐☐☐☐
+☐3☐☐1☐
+☐☐☐☐☐☐
+
+The exciting game of multiplayer landmine removal in the midst of a raging battle!
+
+Created by Ben Jaberg, copyright 2016
+
+v0.146
+
+-->
+
 <!doctype html>
 <html>
 <head>
